--- a/cInteger/cInteger.csproj
+++ b/cInteger/cInteger.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Source\checkInt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\decimal.cs" />
+    <Compile Include="Source\Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
