--- a/Common/cLanguage/cLanguage.csproj
+++ b/Common/cLanguage/cLanguage.csproj
@@ -35,12 +35,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Source\arabicCode.cs" />
-    <Compile Include="Source\chkLanguage.cs" />
+    <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\TLanguage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="CommonLog">
-      <HintPath>..\Public\CommonLog.dll</HintPath>
+      <HintPath>..\..\Public\CommonLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
