--- a/Files/cDrive/cDrive.csproj
+++ b/Files/cDrive/cDrive.csproj
@@ -37,7 +37,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\cdr.cs" />
+    <Compile Include="Source\drives.cs" />
+    <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
