--- a/Methods/cDictionary/cDictionary.csproj
+++ b/Methods/cDictionary/cDictionary.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Source\chkDic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\languages.cs" />
+    <Compile Include="Source\Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
