--- a/Classes/cSerialize/cSerialize.csproj
+++ b/Classes/cSerialize/cSerialize.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Source\chkSerialize.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
