--- a/Times/cTime/cTime.csproj
+++ b/Times/cTime/cTime.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="Source\chkTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
