--- a/Tests/Temp01/Temp01.csproj
+++ b/Tests/Temp01/Temp01.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Do.cs" />
+    <Compile Include="Entrance.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Verify01.cs" />
