--- a/CS60DN46/Ch02BuildingApp/SimpleConsoleApp/SimpleConsoleApp.csproj
+++ b/CS60DN46/Ch02BuildingApp/SimpleConsoleApp/SimpleConsoleApp.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
