--- a/CS60DN46/Ch05Encapsulation/SimpleClass/SimpleClass.csproj
+++ b/CS60DN46/Ch05Encapsulation/SimpleClass/SimpleClass.csproj
@@ -44,8 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
-    <Compile Include="Motor.cs" />
+    <Compile Include="MotorFlow.cs" />
     <Compile Include="Motorcycle.cs" />
+    <Compile Include="MotorOpetional.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
