--- a/CS60DN46/Ch05Encapsulation/StaticData/StaticData.csproj
+++ b/CS60DN46/Ch05Encapsulation/StaticData/StaticData.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavingsAccount.cs" />
+    <Compile Include="SavingsAccount2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
