--- a/CS60DN46/Ch05Encapsulation/StaticData/StaticData.csproj
+++ b/CS60DN46/Ch05Encapsulation/StaticData/StaticData.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavingsAccount.cs" />
     <Compile Include="SavingsAccount2.cs" />
+    <Compile Include="SavingsAccount3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
