--- a/CS60DN46/Ch05Encapsulation/EmployeeApp/EmployeeApp.csproj
+++ b/CS60DN46/Ch05Encapsulation/EmployeeApp/EmployeeApp.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmployeePro.cs" />
     <Compile Include="EmployeeTra.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
