--- a/CS60DN46/Ch05Encapsulation/StaticData/StaticData.csproj
+++ b/CS60DN46/Ch05Encapsulation/StaticData/StaticData.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SavingsAccount.cs" />
+    <Compile Include="SavingsAccount1.cs" />
     <Compile Include="SavingsAccount2.cs" />
     <Compile Include="SavingsAccount3.cs" />
   </ItemGroup>
