--- a/CS60DN46/Ch06InheritancePolymorphism/BasicInheritance/BasicInheritance.csproj
+++ b/CS60DN46/Ch06InheritancePolymorphism/BasicInheritance/BasicInheritance.csproj
@@ -47,9 +47,11 @@
     <Compile Include="MiniVan.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecVan.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Cars.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
