--- a/CS60DN46/Ch06InheritancePolymorphism/Employees/Employees.csproj
+++ b/CS60DN46/Ch06InheritancePolymorphism/Employees/Employees.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Employee.Core.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Manager.cs" />
+    <Compile Include="Outer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PTSalesPerson.cs" />
