--- a/CS60DN46/Ch07Exception/CustomException/CustomException.csproj
+++ b/CS60DN46/Ch07Exception/CustomException/CustomException.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Car.cs" />
     <Compile Include="CarIsDeadException1.cs" />
     <Compile Include="CarIsDeadException2.cs" />
+    <Compile Include="CarIsDeadExceptionBest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Radio.cs" />
