--- a/CS60DN46/Ch07Exception/MultipleException/MultipleException.csproj
+++ b/CS60DN46/Ch07Exception/MultipleException/MultipleException.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
-    <Compile Include="CarIsDeadException2.cs" />
+    <Compile Include="CarIsDeadException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Radio.cs" />
