--- a/CS60DN46/Ch08Interface/CloneablePoint/CloneablePoint.csproj
+++ b/CS60DN46/Ch08Interface/CloneablePoint/CloneablePoint.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Point.cs" />
     <Compile Include="Point2.cs" />
+    <Compile Include="PointDescription.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
