--- a/CS60DN46/Ch08Interface/CustomEnumerator/CustomEnumerator.csproj
+++ b/CS60DN46/Ch08Interface/CustomEnumerator/CustomEnumerator.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="Garage.cs" />
+    <Compile Include="Garage2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Radio.cs" />
