--- a/Variables/cArray/cArray.csproj
+++ b/Variables/cArray/cArray.csproj
@@ -34,7 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\chkArray.cs" />
+    <Compile Include="Source\Assign.cs" />
+    <Compile Include="Source\CheckArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
