--- a/CS60DN46/Ch10DelegateEventLambda/CarEvents/CarEvents.csproj
+++ b/CS60DN46/Ch10DelegateEventLambda/CarEvents/CarEvents.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="CarCustom.cs" />
+    <Compile Include="CarGeneric.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
