--- a/CS60DN46/Ch11AdvancedFeatures/SimpleIndexer/SimpleIndexer.csproj
+++ b/CS60DN46/Ch11AdvancedFeatures/SimpleIndexer/SimpleIndexer.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Person.cs" />
     <Compile Include="PersonCollection.cs" />
+    <Compile Include="PersonCollectionDic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
