--- a/CS60DN46/Ch11AdvancedFeatures/SimpleIndexer/SimpleIndexer.csproj
+++ b/CS60DN46/Ch11AdvancedFeatures/SimpleIndexer/SimpleIndexer.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IStringContainer.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="PersonCollection.cs" />
     <Compile Include="PersonCollectionDic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SomeClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
