--- a/CS60DN46/Ch11AdvancedFeatures/UnsafeCode/UnsafeCode.csproj
+++ b/CS60DN46/Ch11AdvancedFeatures/UnsafeCode/UnsafeCode.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Point.cs" />
+    <Compile Include="PointRef.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
