--- a/CS60DN46/Ch14ClassLibraries/CustomNamespaces/CustomNamespaces.csproj
+++ b/CS60DN46/Ch14ClassLibraries/CustomNamespaces/CustomNamespaces.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hexagon.cs" />
+    <Compile Include="My3DShapes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Circle.cs" />
