--- a/CS60DN46/Ch14ClassLibraries/CSharpCarClient/CSharpCarClient.csproj
+++ b/CS60DN46/Ch14ClassLibraries/CSharpCarClient/CSharpCarClient.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CarLibrary">
+      <HintPath>..\CarLibrary\bin\Debug\CarLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
