--- a/CS60DN46/Ch14ClassLibraries/CarLibrary/CarLibrary.csproj
+++ b/CS60DN46/Ch14ClassLibraries/CarLibrary/CarLibrary.csproj
@@ -30,6 +30,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>WKeyPair.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,6 +52,9 @@
     <Compile Include="MiniVan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SportsCar.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="WKeyPair.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
