--- a/CS60DN46/Ch14ClassLibraries/CarLibrary/CarLibrary.csproj
+++ b/CS60DN46/Ch14ClassLibraries/CarLibrary/CarLibrary.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="MiniVan.cs" />
+    <Compile Include="MusicMedia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SportsCar.cs" />
   </ItemGroup>
