--- a/CS60DN46/Ch14ClassLibraries/SharedCarLibClient/App.config
+++ b/CS60DN46/Ch14ClassLibraries/SharedCarLibClient/App.config
@@ -3,4 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="CarLibrary" publicKeyToken="f7d28bcce216ee8c" culture="neutral" />
+        <bindingRedirect oldVersion="1.0.0.1-1.0.0.2" newVersion="2.0.0.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
