--- a/CS60DN46/Ch14ClassLibraries/CodeBaseClient/App.config
+++ b/CS60DN46/Ch14ClassLibraries/CodeBaseClient/App.config
@@ -4,9 +4,12 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+    <assemblyBinding xmlms="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="CarLibrary" publicKeyToken="f7d28bcce216ee8c" culture="neutral" />
+        <!--
+        <codeBase version="2.0.0.1" href="file://D:/workFolder/CarLibs/Version2.0/CarLibrary.dll" />
+        -->
         <bindingRedirect oldVersion="1.0.0.1-1.0.0.2" newVersion="2.0.0.2" />
       </dependentAssembly>
     </assemblyBinding>
