--- a/CS60DN46/Ch14ClassLibraries/ConsumeSharedAssembly/ConsumeSharedAssembly.csproj
+++ b/CS60DN46/Ch14ClassLibraries/ConsumeSharedAssembly/ConsumeSharedAssembly.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0F8B5A2E-D83A-434F-81D7-F9442DD46004}</ProjectGuid>
+    <ProjectGuid>{DD830822-0F50-4B46-AAEF-192D5DF49870}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SharedCarLibClient</RootNamespace>
-    <AssemblyName>SharedCarLibClient</AssemblyName>
+    <RootNamespace>ConsumeSharedAssembly</RootNamespace>
+    <AssemblyName>ConsumeSharedAssembly</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,19 +33,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CarLibrary, Version=2.0.0.1, Culture=neutral, PublicKeyToken=f7d28bcce216ee8c, processorArchitecture=MSIL">
+    <Reference Include="CarLibrary, Version=2.0.0.2, Culture=neutral, PublicKeyToken=f7d28bcce216ee8c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\CarLibrary\bin\Debug\Version1.0\CarLibrary.dll</HintPath>
+      <HintPath>..\CarLibrary\bin\Debug\CarLibrary.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
