--- a/CS60DN46/Ch15ReflectionBinding/ApplyingAttributes/ApplyingAttributes.csproj
+++ b/CS60DN46/Ch15ReflectionBinding/ApplyingAttributes/ApplyingAttributes.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Motorcycle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Winnebago.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
