--- a/CS60DN46/Ch15ReflectionBinding/AttributedCarLibrary/AttributedCarLibrary.csproj
+++ b/CS60DN46/Ch15ReflectionBinding/AttributedCarLibrary/AttributedCarLibrary.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VehicleDescription.cs" />
+    <Compile Include="VehicleDescriptionAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
