--- a/CS60DN46/Ch15ReflectionBinding/AttributedCarLibrary/AttributedCarLibrary.csproj
+++ b/CS60DN46/Ch15ReflectionBinding/AttributedCarLibrary/AttributedCarLibrary.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="VehicleDescriptionAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Winnebago.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
