--- a/CS60DN46/Ch15ReflectionBinding/AttributedCarLibrary/AttributedCarLibrary.csproj
+++ b/CS60DN46/Ch15ReflectionBinding/AttributedCarLibrary/AttributedCarLibrary.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HorseAndBuggy.cs" />
+    <Compile Include="Motorcycle.cs" />
     <Compile Include="VehicleDescriptionAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Winnebago.cs" />
