--- a/CS60DN46/Ch15ReflectionBinding/VbSnapIn/VbSnapIn.vbproj
+++ b/CS60DN46/Ch15ReflectionBinding/VbSnapIn/VbSnapIn.vbproj
@@ -44,6 +44,10 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommonSnappableTypes, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\CommonSnappableTypes\bin\Debug\CommonSnappableTypes.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
@@ -94,12 +98,6 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CommonSnappableTypes\CommonSnappableTypes.csproj">
-      <Project>{53033a45-f9e6-4e4c-ab78-f0e7966af258}</Project>
-      <Name>CommonSnappableTypes</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
