--- a/CS60DN46/Ch15ReflectionBinding/CSharpSnapIn/CSharpSnapIn.csproj
+++ b/CS60DN46/Ch15ReflectionBinding/CSharpSnapIn/CSharpSnapIn.csproj
@@ -31,18 +31,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommonSnappableTypes, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\CommonSnappableTypes\bin\Debug\CommonSnappableTypes.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharpModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CommonSnappableTypes\CommonSnappableTypes.csproj">
-      <Project>{53033a45-f9e6-4e4c-ab78-f0e7966af258}</Project>
-      <Name>CommonSnappableTypes</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
