--- a/CS60DN46/Ch16Dynamic/ExportDataToOfficeApp/ExportDataToOfficeApp.csproj
+++ b/CS60DN46/Ch16Dynamic/ExportDataToOfficeApp/ExportDataToOfficeApp.csproj
@@ -46,17 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
     <Compile Include="ExportData.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ExportData.Designer.cs">
       <DependentUpon>ExportData.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewCarDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewCarDialog.designer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ExportData.resx">
       <DependentUpon>ExportData.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NewCarDialog.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
