--- a/CS60DN46/Ch16Dynamic/ExportDataWithoutDynamic/ExportDataWithoutDynamic.csproj
+++ b/CS60DN46/Ch16Dynamic/ExportDataWithoutDynamic/ExportDataWithoutDynamic.csproj
@@ -50,9 +50,7 @@
     <Compile Include="ExportData.Designer.cs">
       <DependentUpon>ExportData.cs</DependentUpon>
     </Compile>
-    <Compile Include="NewCarDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="NewCarDialog.cs" />
     <Compile Include="NewCarDialog.designer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
