--- a/CS60DN46/Ch17Process/ObjectContextApp/ObjectContextApp.csproj
+++ b/CS60DN46/Ch17Process/ObjectContextApp/ObjectContextApp.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SportsCar.cs" />
+    <Compile Include="SportsCarTS.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
