--- a/CS60DN46/Ch18CIL/RoundTrip/RoundTrip.csproj
+++ b/CS60DN46/Ch18CIL/RoundTrip/RoundTrip.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="HelloProgram.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
