--- a/Collection/List/List.csproj
+++ b/Collection/List/List.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExamineList.cs" />
+    <Compile Include="First.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
