--- a/CS60DN46/Ch20IO/BinaryWriterReader/BinaryWriterReader.csproj
+++ b/CS60DN46/Ch20IO/BinaryWriterReader/BinaryWriterReader.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FE628E3B-75F7-46DB-A5CD-0AD3A9D32964}</ProjectGuid>
+    <ProjectGuid>{E15CE567-1342-4E92-B084-51032BCAE8A5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>StringReaderWriterApp</RootNamespace>
-    <AssemblyName>StringReaderWriterApp</AssemblyName>
+    <RootNamespace>BinaryWriterReader</RootNamespace>
+    <AssemblyName>BinaryWriterReader</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,6 +34,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
