--- a/Methods/cMethod/cMethod.csproj
+++ b/Methods/cMethod/cMethod.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Source\param.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Program.cs" />
+    <Compile Include="Source\switcher.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
