--- a/Methods/cDictionary/cDictionary.csproj
+++ b/Methods/cDictionary/cDictionary.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\chkDic.cs" />
+    <Compile Include="Source\ExamingDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\languages.cs" />
     <Compile Include="Source\Program.cs" />
