--- a/Methods/cDictionary/cDictionary.csproj
+++ b/Methods/cDictionary/cDictionary.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A8A027F5-C458-4DC0-98F2-9E5A16E20EF9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>cDictionary</RootNamespace>
-    <AssemblyName>cDictionary</AssemblyName>
+    <RootNamespace>CDictionary</RootNamespace>
+    <AssemblyName>CDictionary</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -36,7 +36,7 @@
   <ItemGroup>
     <Compile Include="Source\ExamingDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\languages.cs" />
+    <Compile Include="Source\Languages.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
