--- a/Methods/cList/cList.csproj
+++ b/Methods/cList/cList.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BB8E1AC4-E028-4752-AA29-6F19BEE3FE08}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>cList</RootNamespace>
-    <AssemblyName>cList</AssemblyName>
+    <RootNamespace>CList</RootNamespace>
+    <AssemblyName>CList</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -36,15 +36,15 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\Biref.cs" />
-    <Compile Include="Source\cArrayList.cs" />
-    <Compile Include="Source\cList.cs" />
-    <Compile Include="Source\cLoop.cs" />
+    <Compile Include="Source\Brief.cs" />
+    <Compile Include="Source\CArrayList.cs" />
+    <Compile Include="Source\CList.cs" />
+    <Compile Include="Source\CLoop.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\index.cs" />
-    <Compile Include="Source\listjoin.cs" />
-    <Compile Include="Source\listNPV.cs" />
+    <Compile Include="Source\CIndex.cs" />
+    <Compile Include="Source\ListJoin.cs" />
+    <Compile Include="Source\ListNPV.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
