--- a/Methods/cRegex/cRegex.csproj
+++ b/Methods/cRegex/cRegex.csproj
@@ -37,14 +37,14 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\capRegex.cs" />
-    <Compile Include="Source\chkRegex.cs" />
+    <Compile Include="Source\CapRegex.cs" />
+    <Compile Include="Source\ChkRegex.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\npvRegex.cs" />
-    <Compile Include="Source\timeRegex.cs" />
-    <Compile Include="Source\webvtt.cs" />
-    <Compile Include="Source\workRegex.cs" />
+    <Compile Include="Source\NPVRegex.cs" />
+    <Compile Include="Source\TimeRegex.cs" />
+    <Compile Include="Source\Webvtt.cs" />
+    <Compile Include="Source\WorkRegex.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
