--- a/Variables/cEnum/cEnum.csproj
+++ b/Variables/cEnum/cEnum.csproj
@@ -34,9 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\chkEnum.cs" />
+    <Compile Include="Source\ChkEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\compare.cs" />
+    <Compile Include="Source\Compare.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
