--- a/Variables/cEnvironment/cEnvironment.csproj
+++ b/Variables/cEnvironment/cEnvironment.csproj
@@ -38,7 +38,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\cenv.cs" />
+    <Compile Include="Source\CEnv.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
