--- a/Variables/cInteger/cInteger.csproj
+++ b/Variables/cInteger/cInteger.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\random.cs" />
+    <Compile Include="Source\CRandom.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\CheckDecimal.cs" />
