--- a/Variables/cVariable/cVariable.csproj
+++ b/Variables/cVariable/cVariable.csproj
@@ -34,11 +34,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\calculation.cs" />
+    <Compile Include="Source\Calculation.cs" />
     <Compile Include="Source\Program.cs" />
-    <Compile Include="Source\questionmark.cs" />
-    <Compile Include="Source\valuable.cs" />
-    <Compile Include="Source\entry.cs" />
+    <Compile Include="Source\Questionmark.cs" />
+    <Compile Include="Source\Valuable.cs" />
+    <Compile Include="Source\Entry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
