--- a/Common/cLanguage/cLanguage.csproj
+++ b/Common/cLanguage/cLanguage.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\arabicCode.cs" />
+    <Compile Include="Source\ArabicCode.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\TLanguage.cs" />
