--- a/Dlls/cDllInterface/cDllInterface.csproj
+++ b/Dlls/cDllInterface/cDllInterface.csproj
@@ -35,7 +35,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\idefine.cs" />
+    <Compile Include="Source\Idefine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
