--- a/Dlls/cDllLibm/cDllLibm.csproj
+++ b/Dlls/cDllLibm/cDllLibm.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\midLib.cs" />
+    <Compile Include="Source\MidLib.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
