--- a/Dlls/MergeSrc1/MergeSrc1.csproj
+++ b/Dlls/MergeSrc1/MergeSrc1.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\src1.cs" />
+    <Compile Include="Source\Src1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
