--- a/Dlls/MergeSrc2/MergeSrc2.csproj
+++ b/Dlls/MergeSrc2/MergeSrc2.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\src2.cs" />
+    <Compile Include="Source\Src2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
