--- a/Events/WorkLib/WorkLib.csproj
+++ b/Events/WorkLib/WorkLib.csproj
@@ -34,7 +34,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\workSub.cs" />
+    <Compile Include="Source\WorkSub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
