names in cstream project

--- a/Files/cStream/cStream.csproj
+++ b/Files/cStream/cStream.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\chkStream.cs" />
+    <Compile Include="Source\ChkStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
