--- a/CS60DN46/Ch22Disconnected/DataGridViewDataDesigner/DataGridViewDataDesigner.csproj
+++ b/CS60DN46/Ch22Disconnected/DataGridViewDataDesigner/DataGridViewDataDesigner.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E60D08E3-BBFC-4EA9-92C3-1D3671100BF0}</ProjectGuid>
+    <ProjectGuid>{8A91B030-4488-42BE-97C2-33C196753C8C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>DataGridViewDataDesigner</RootNamespace>
     <AssemblyName>DataGridViewDataDesigner</AssemblyName>
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InventoryDataSet.cs">
+      <DependentUpon>InventoryDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="InventoryDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -71,6 +74,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="InventoryDataSet.xsc">
       <DependentUpon>InventoryDataSet.xsd</DependentUpon>
     </None>
