--- a/CS60DN46/Ch23EF/AutoLotConsoleRe/AutoLotConsoleRe.csproj
+++ b/CS60DN46/Ch23EF/AutoLotConsoleRe/AutoLotConsoleRe.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\AutoLotEntities.cs" />
+    <Compile Include="EF\CarPartial.cs" />
     <Compile Include="EF\CreditRisk.cs" />
     <Compile Include="EF\Customer.cs" />
     <Compile Include="EF\Car.cs" />
