default MEX behavior

--- a/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
@@ -5,7 +5,8 @@
     </startup>
   <system.serviceModel>
     <services>
-      <service name = "MagicEightBallServiceLib.MagicEightBallService" behaviorConfiguration="EightBallServiceMEXBehavior">
+      <!-- <service name = "MagicEightBallServiceLib.MagicEightBallService" behaviorConfiguration="EightBallServiceMEXBehavior"> -->
+      <service name = "MagicEightBallServiceLib.MagicEightBallService">
         <!--
         <endpoint address = "" binding = "basicHttpBinding" contract ="MagicEightBallServiceLib.IEightBall" />
         <endpoint address ="mex" binding = "mexHttpBinding" contract ="IMetadataExchange" />
@@ -30,7 +31,8 @@
 
     <behaviors>
       <serviceBehaviors>
-        <behavior name="EightBallServiceMEXBehavior">
+        <!-- <behavior name="EightBallServiceMEXBehavior"> -->
+        <behavior>
           <serviceMetadata httpGetEnabled="true"/>
         </behavior>
       </serviceBehaviors>
