--- a/CS60DN46/Ch25WCF/MathWindowsServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MathWindowsServiceHost/App.config
@@ -5,7 +5,7 @@
     </startup>
   <system.serviceModel>
     <services>
-      <service name="MathServiceLib.MathService"></service>
+      <service name="MathServiceLibrary1.MathService"></service>
     </services>
 
     <behaviors>
