optimize math lib

--- a/CS60DN46/Ch25WCF/MathWindowsServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MathWindowsServiceHost/App.config
@@ -5,13 +5,13 @@
     </startup>
   <system.serviceModel>
     <services>
-      <service name="MathServiceLibrary1.MathService"></service>
+      <service name="MathServiceLib.MathService"></service>
     </services>
 
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <serviceMetadata httpGetBinding="true"/>
+          <serviceMetadata httpGetEnabled="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
