--- a/CS60DN46/Ch23EF/AutoLotConsoleApp/App.config
+++ b/CS60DN46/Ch23EF/AutoLotConsoleApp/App.config
@@ -19,5 +19,8 @@
   </entityFramework>
   <connectionStrings>
     <add name="AutoLotConnection" connectionString="data source=(local);initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--
+    <add name="AutoLotConnection" connectionString="data source=(localDb)\MSSQLLocalDb;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    -->
   </connectionStrings>
 </configuration>
