--- a/CS60DN46/Ch32WebControls/ValidatorCtrls/Web.config
+++ b/CS60DN46/Ch32WebControls/ValidatorCtrls/Web.config
@@ -23,7 +23,7 @@
     </system.codedom>
 
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="WebForms" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
 
 </configuration>
