set session state

--- a/CS60DN46/Ch33State/CookieStateApp/Web.config
+++ b/CS60DN46/Ch33State/CookieStateApp/Web.config
@@ -10,6 +10,7 @@
     <system.web>
       <compilation debug="true" targetFramework="4.7.2"/>
       <httpRuntime targetFramework="4.7.2"/>
+      <sessionState mode="StateServer" stateConnectionString="tcpip=127.0.0.1:42626" sqlConnectionString="data source=127.0.0.1;Trusted_Connection=yes" cookieless="false" timeout="20" />
     </system.web>
     <system.codedom>
         <compilers>
