update config file

--- a/CS60DN46/Ch33State/FunWithProfiles/Web.config
+++ b/CS60DN46/Ch33State/FunWithProfiles/Web.config
@@ -6,6 +6,10 @@
   -->
 
 <configuration>
+  
+    <connectionStrings>
+      <add name="LocalSqlServer" connectionString ="data source=(local);integrated security=SSPI;initial catalog=aspnetdb;" providerName="System.Data.SqlClient" />
+    </connectionStrings>
 
     <system.web>
       <compilation debug="true" targetFramework="4.7.2"/>
@@ -23,7 +27,8 @@
         </providers>
       </profile>
     </system.web>
-    <system.codedom>
+
+  <system.codedom>
         <compilers>
             <compiler language="c#;cs;csharp" extension=".cs"
                 type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
@@ -33,9 +38,5 @@
                 warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
         </compilers>
     </system.codedom>
-  
-    <connectionStrings>
-      <add name="LocalSqlServer" connectionString="Data Source=(local);Integrated Security=SSPI;Initial Catalog=aspnetdb;" providerName="System.Data.SqlClient"/>
-    </connectionStrings>
 
 </configuration>
