--- a/CS60DN46/Ch33State/FunWithProfiles/Web.config
+++ b/CS60DN46/Ch33State/FunWithProfiles/Web.config
@@ -3,12 +3,13 @@
     <system.web>
       <compilation debug="true" targetFramework="4.7.2"/>
       <httpRuntime targetFramework="4.7.2"/>
+      <anonymousIdentification enabled="true"/>
       <profile>
         <properties>
-          <add name="StreetAddress" type="System.String" />
-          <add name="City" type="System.String"/>
-          <add name="State" type="System.String" />
-          <add name="TotalPost" type="System.Int32" />
+          <add name="StreetAddress" type="System.String" allowAnonymous="true" />
+          <add name="City" type="System.String" allowAnonymous="true"/>
+          <add name="State" type="System.String" allowAnonymous="true" />
+          <add name="TotalPost" type="System.Int32" allowAnonymous="true" />
         </properties>
       </profile>
     </system.web>
