correct metadata location

--- a/CS60DN46/Ch34MVC/AutoLotDAL/AutoLotDAL.csproj
+++ b/CS60DN46/Ch34MVC/AutoLotDAL/AutoLotDAL.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Models\CreditRisk.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\MetaData\InventoryMetaData.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Partials\InventoryPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
