--- a/Collection/Dictionary/Dictionary.csproj
+++ b/Collection/Dictionary/Dictionary.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="ExamingDictionary.cs" />
     <Compile Include="IntKey.cs" />
-    <Compile Include="languages.cs" />
+    <Compile Include="Languages.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
